[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Textures/KOMIKAX_.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Styles/SytleDark.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/Styles/StyleSmallBorderDark.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/Styles/StyleDarkPressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/Combat/Combat UI/CombatMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
extra_spacing_bottom = 7
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
extra_spacing_bottom = 7
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[node name="CombatMenu" type="MarginContainer"]
margin_left = -0.943909
margin_right = 606.056
margin_bottom = 450.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
script = ExtResource( 5 )

[node name="Container" type="HBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 556.0
margin_bottom = 400.0
custom_constants/separation = 24

[node name="Back" type="Button" parent="Container"]
visible = false
margin_right = 50.0
margin_bottom = 415.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Label" type="Label" parent="Container/Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.5
margin_top = -102.5
margin_right = 10.5
margin_bottom = 102.5
custom_fonts/font = SubResource( 2 )
text = "B
A
C
K"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightSelection" type="VBoxContainer" parent="Container"]
visible = false
margin_right = 400.0
margin_bottom = 385.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move1" type="Button" parent="Container/FightSelection"]
margin_right = 400.0
margin_bottom = 57.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Move2" type="Button" parent="Container/FightSelection"]
margin_top = 82.0
margin_right = 400.0
margin_bottom = 139.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Move3" type="Button" parent="Container/FightSelection"]
margin_top = 164.0
margin_right = 400.0
margin_bottom = 221.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Move4" type="Button" parent="Container/FightSelection"]
margin_top = 246.0
margin_right = 400.0
margin_bottom = 303.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Move5" type="Button" parent="Container/FightSelection"]
margin_top = 328.0
margin_right = 400.0
margin_bottom = 385.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="MainSelection" type="VBoxContainer" parent="Container"]
margin_right = 400.0
margin_bottom = 350.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Change" type="Button" parent="Container/MainSelection"]
margin_right = 400.0
margin_bottom = 57.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "Change"

[node name="Fight" type="Button" parent="Container/MainSelection"]
margin_top = 82.0
margin_right = 400.0
margin_bottom = 139.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = SubResource( 6 )
text = "Fight"

[node name="Info" type="Button" parent="Container/MainSelection"]
margin_top = 164.0
margin_right = 400.0
margin_bottom = 221.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = SubResource( 7 )
text = "Info"

[node name="AllySwitchSelection" type="VBoxContainer" parent="Container"]
visible = false
margin_bottom = 350.0
custom_constants/separation = 25

[node name="Slot3" type="Button" parent="Container/AllySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot4" type="Button" parent="Container/AllySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot5" type="Button" parent="Container/AllySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot6" type="Button" parent="Container/AllySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="EnemySwitchSelection" type="VBoxContainer" parent="Container"]
visible = false
margin_bottom = 350.0
custom_constants/separation = 25

[node name="Slot3" type="Button" parent="Container/EnemySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot4" type="Button" parent="Container/EnemySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot5" type="Button" parent="Container/EnemySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot6" type="Button" parent="Container/EnemySwitchSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="KnockoutSelection" type="VBoxContainer" parent="Container"]
visible = false
margin_bottom = 350.0
custom_constants/separation = 25

[node name="Slot3" type="Button" parent="Container/KnockoutSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot4" type="Button" parent="Container/KnockoutSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot5" type="Button" parent="Container/KnockoutSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[node name="Slot6" type="Button" parent="Container/KnockoutSelection"]
visible = false
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )

[connection signal="pressed" from="Container/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Container/FightSelection/Move1" to="." method="_on_Move1_pressed"]
[connection signal="pressed" from="Container/FightSelection/Move2" to="." method="_on_Move2_pressed"]
[connection signal="pressed" from="Container/FightSelection/Move3" to="." method="_on_Move3_pressed"]
[connection signal="pressed" from="Container/FightSelection/Move4" to="." method="_on_Move4_pressed"]
[connection signal="pressed" from="Container/FightSelection/Move5" to="." method="_on_Move5_pressed"]
[connection signal="pressed" from="Container/MainSelection/Change" to="." method="_on_Change_pressed"]
[connection signal="pressed" from="Container/MainSelection/Fight" to="." method="_on_Fight_pressed"]
[connection signal="pressed" from="Container/MainSelection/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="Container/AllySwitchSelection/Slot3" to="." method="_on_Ally_Slot3_pressed"]
[connection signal="pressed" from="Container/AllySwitchSelection/Slot4" to="." method="_on_Ally_Slot4_pressed"]
[connection signal="pressed" from="Container/AllySwitchSelection/Slot5" to="." method="_on_Ally_Slot5_pressed"]
[connection signal="pressed" from="Container/AllySwitchSelection/Slot6" to="." method="_on_Ally_Slot6_pressed"]
[connection signal="pressed" from="Container/EnemySwitchSelection/Slot3" to="." method="_on_Enemy_Slot3_pressed"]
[connection signal="pressed" from="Container/EnemySwitchSelection/Slot4" to="." method="_on_Enemy_Slot4_pressed"]
[connection signal="pressed" from="Container/EnemySwitchSelection/Slot5" to="." method="_on_Enemy_Slot5_pressed"]
[connection signal="pressed" from="Container/EnemySwitchSelection/Slot6" to="." method="_on_Enemy_Slot6_pressed"]
[connection signal="pressed" from="Container/KnockoutSelection/Slot3" to="." method="_on_KO_Slot3_pressed"]
[connection signal="pressed" from="Container/KnockoutSelection/Slot4" to="." method="_on_KO_Slot4_pressed"]
[connection signal="pressed" from="Container/KnockoutSelection/Slot5" to="." method="_on_KO_Slot5_pressed"]
[connection signal="pressed" from="Container/KnockoutSelection/Slot6" to="." method="_on_KO_Slot6_pressed"]
